🚀 Dreamine.MVVM.Behaviors.Wpf 1.0.2 배포 업데이트
- Dreamine MVVM 풀패키지 구조에 맞춘 `.csproj` 리팩토링
- icon.png, README.md, PackageProjectUrl 등 메타데이터 완비
- NuGet 공식 경로 및 README 연동 확인 완료

🔗 NuGet 패키지 경로
https://www.nuget.org/packages/Dreamine.MVVM.Behaviors.Wpf/1.0.2

📦 풀패키지 구조 공개 저장소
https://github.com/CodeMaru-Dreamine/Dreamine.MVVM.FullKit

--- a/Dreamine.MVVM.Behaviors.Wpf.csproj
+++ b/Dreamine.MVVM.Behaviors.Wpf.csproj
@@ -7,16 +7,16 @@
     <UseWPF>true</UseWPF>
 
     <PackageId>Dreamine.MVVM.Behaviors.Wpf</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>Dreamine Core Team</Authors>
     <Company>Dreamine</Company>
     <Description>WPF 플랫폼에 특화된 MVVM Behavior 구현을 포함하는 Dreamine 모듈입니다.</Description>
     <PackageTags>MVVM;WPF;Dreamine;Behavior;Interaction</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/dreamine/Dreamine</RepositoryUrl>
+    <RepositoryUrl>https://github.com/CodeMaru-Dreamine/Dreamine.MVVM.Behaviors.Wpf</RepositoryUrl>
     <Title>Dreamine.MVVM.Behaviors.Wpf</Title>
     <Copyright>© 2025 Dreamine Core Team. All rights reserved.</Copyright>
-    <PackageProjectUrl>https://github.com/CodeMaru-Dreamine/Dreamine.MVVM.Behaviors.Wpf</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/CodeMaru-Dreamine/Dreamine.MVVM.FullKit</PackageProjectUrl>
     <PackageIcon>icon.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
